--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto-js": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
     "vite-plugin-svgr": "^2.4.0"
