--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -26,12 +26,15 @@
     "@types/lodash": "^4.14.194",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-legacy": "^4.0.3",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1",
+    "terser": "^5.17.5",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
+    "vite-plugin-mkcert": "^1.15.0",
     "vite-plugin-pwa": "^0.14.7"
   }
 }
