--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "framer-motion": "^10.12.10",
     "lodash": "^4.17.21",
@@ -17,6 +19,7 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
+    "swr": "^2.1.5",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
