--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "framer-motion": "^10.12.10",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
