--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
+    "socket.io-client": "^4.6.2",
     "swr": "^2.1.5",
     "vite-plugin-svgr": "^2.4.0"
   },
