--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
+    "firebase": "^9.23.0",
     "framer-motion": "^10.12.10",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
