--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "tsc && vite build",
+    "dev": "npm run build:sw && vite --host",
+    "build": "npm run build:sw && tsc && vite build",
+    "build:sw": "tsc ./customsw.ts --outDir public --lib webworker",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -42,6 +43,7 @@
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-mkcert": "^1.15.0",
-    "vite-plugin-pwa": "^0.14.7"
+    "vite-plugin-pwa": "^0.14.7",
+    "vite-plugin-ts": "^1.3.2-1"
   }
 }
